source/stylesheets/partials/_modal.scss
body.modal {
  overflow: hidden;
  @include mobile-layout-only {
    position: fixed;
  }
}

dialog.modal {
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(255,255,255,0.9);
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  opacity: 0;
  z-index: -1;
  transition: opacity 1s ease;
  border: none;
  width: auto;
  height: auto;
  padding: 0px;
  &:target {
    opacity: 1;
    z-index: 1;
    display: block;
  }
  button.close {
    position: absolute;
    border: none;
    right: 0px;

    z-index: 4;

    -webkit-appearance: none;
    background-color: transparent;

    transition: font-size 0.5s ease;

    height: 60px;
    width: 60px;

    color: $dark-gray-color;

    font-size: 2em;

    &:hover {
      font-size: 2.5em;
    }

    @include mobile-layout-only {
      // width: 1.5em;
      // height: 1.5em;
    }
  }
}

